# Mediatovideo-Converter

./: .gitignore  CHANGELOG.md  HISTORY.md  README.md  install_macos.sh  install_windows.ps1  media-to-mkv-converter.sh  pyproject.toml  run_app.py  run_macos.command  run_windows.bat
mediatovideo_converter/: WEB_UI.py  __init__.py  __main__.py  converter.py  error_messages.py  models.py  scanner.py
scripts/: build_app.py
tests/: test_converter.py  test_error_messages.py  test_installers.py  test_scanner.py
